[package]
name = "rascam"
version = "0.0.2"
authors = ["Peter Sutherland <pedrosland+rascam@gmail.com>"]
description = "Library for taking photos and videos with the Raspberry Pi camera"
repository = "https://github.com/pedrosland/rascam"
documentation = "https://pedrosland.github.io/rascam/"
readme = "README.md"
license = "MIT"
categories = ["hardware-support"]
keywords = ["camera", "raspberry", "pi", "rpi"]
exclude = ["ci/*"]
build = "build.rs"
edition = "2018"

[dependencies]
mmal-sys = { git = "https://github.com/Bluskript/mmal-sys" }
libc = "0.2"
parking_lot = "0.10"
scopeguard = "1.0"
futures = "0.3"
serde = { version = "^1.0", optional = true, features = ["derive"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "0.4.0"

[features]
default = []

# Enable this feature to enable some print statements for debugging.
debug = []
serde = ["dep:serde"]

# This feature is only for running integration tests with a real Raspberry Pi with camera.
test-rpi = []

[package.metadata.docs.rs]
default-target = "armv7-unknown-linux-gnueabihf"
